apply prettier to style.css

--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-*, *::after, *::before{
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-:root{
+:root {
   --bright-orange: hsl(31, 77%, 52%);
   --dark-cyan: hsl(184, 100%, 22%);
   --very-dark-cyan: hsl(179, 100%, 13%);
@@ -12,23 +14,23 @@
   --very-light-gray: hsl(0, 0%, 95%);
 }
 
-.lexend{
+.lexend {
   font-family: 'Lexend Deca', sans-serif;
   font-weight: 400;
 }
 
-.big-shoulders{
+.big-shoulders {
   font-family: 'Big Shoulders Display', cursive;
   font-weight: 700;
   text-transform: uppercase;
   font-size: 41px;
 }
 
-h1{
+h1 {
   display: none;
 }
 
-main{
+main {
   width: 100%;
   height: 100vh;
   min-height: 600px;
@@ -38,22 +40,22 @@ main{
   background-color: var(--very-light-gray);
 }
 
-.card-list{
+.card-list {
   list-style-type: none;
   display: flex;
   border-radius: 10px;
   overflow: hidden;
 }
 
-.card--orange{
+.card--orange {
   background-color: var(--bright-orange);
 }
 
-.card--dark-cyan{
+.card--dark-cyan {
   background-color: var(--dark-cyan);
 }
 
-.card--very-dark-cyan{
+.card--very-dark-cyan {
   background-color: var(--very-dark-cyan);
 }
 
@@ -63,12 +65,12 @@ main{
   padding: 48px;
 }
 
-.card__title{
+.card__title {
   margin-top: 32px;
   color: var(--very-light-gray);
 }
 
-.card__description{
+.card__description {
   margin-top: 24px;
   color: var(--transparent-white);
   height: 130px;
@@ -76,54 +78,58 @@ main{
   font-size: 15px;
 }
 
-.card__cta--orange, .card__cta--dark-cyan, .card__cta--very-dark-cyan{
+.card__cta--orange,
+.card__cta--dark-cyan,
+.card__cta--very-dark-cyan {
   margin-top: 76px;
   width: 148px;
   font-size: 15px;
-  padding: 13px 0px; 
-  border-radius: 999px;  
-  background-color: var(--very-light-gray);  
+  padding: 13px 0px;
+  border-radius: 999px;
+  background-color: var(--very-light-gray);
   border: none;
   cursor: pointer;
 }
 
-.card__cta--orange:hover, .card__cta--dark-cyan:hover, .card__cta--very-dark-cyan:hover{
+.card__cta--orange:hover,
+.card__cta--dark-cyan:hover,
+.card__cta--very-dark-cyan:hover {
   background-color: inherit;
   color: var(--very-light-gray);
   border: 2px solid var(--very-light-gray);
 }
 
-.card__cta--orange{
-  color: var(--bright-orange);  
+.card__cta--orange {
+  color: var(--bright-orange);
 }
 
-.card__cta--dark-cyan{
-  color: var(--very-dark-cyan);  
+.card__cta--dark-cyan {
+  color: var(--very-dark-cyan);
 }
 
-.card--very-dark-cyan{
-  color: var(--very-dark-cyan);  
+.card--very-dark-cyan {
+  color: var(--very-dark-cyan);
 }
 
-@media screen and (max-width: 992px){
-
-  main{
+@media screen and (max-width: 992px) {
+  main {
     height: auto;
     margin-top: 90px;
     margin-bottom: 90px;
   }
 
-  .card-list{
+  .card-list {
     flex-direction: column;
   }
 
-  .card{
+  .card {
     height: 440px;
     padding-right: 28px;
   }
 
-  .card__cta--orange, .card__cta--dark-cyan, .card__cta--very-dark-cyan{
+  .card__cta--orange,
+  .card__cta--dark-cyan,
+  .card__cta--very-dark-cyan {
     margin-top: 16px;
   }
-
 }
